[package]
name = "xboxlive-auth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
reqwest = { version = "0.11", features = ["cookies", "json"] }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
serde = { version = "1.0.126" }
serde_json = "1.0.64"
structopt = "0.3"
